# agent_rl

./: .env.example  .gitignore  README.md  docker-compose.yml  main-hotpot.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
LLM-logic/: .gitignore  README.md
LLM-logic/.github/: PULL_REQUEST_TEMPLATE.md
LLM-logic/backend/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  rag.py  requirements.txt  rules.pl  run.sh
LLM-logic/backend/notebooks/: cot.ipynb  eval.ipynb  gen_responses.ipynb  injestion.ipynb  proslm.ipynb  proslm_with_fol.ipynb  proslm_with_logical_english.ipynb  rag.ipynb  rag_splitter_test.ipynb  rules.pl
LLM-logic/backend/src/control/: conversation_control.py  get_response.py  query.py  user_control.py
LLM-logic/backend/src/model/: conversation_model.py  llm_provider.py  user_model.py
LLM-logic/backend/src/model/agenticWorkflows/: README.md  adaptive_rag.py  agentic_rag.py  rat_rag.py  requirements.txt  utils.py
LLM-logic/docs/: MongoDBConnectionIssue.md  Mongodb.md
LLM-logic/frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
agent_integration/: Makefile  main-hotpot.py  requirements.txt
agents/: RLRouterAgent.py  evaluate_dataset_real.py  evaluation_agent.py  generation_agent.py  langgraph_rag.py  reasoning_agent.py  retrieval_agent.py
rag_service/: .env.example  Dockerfile  main.py  requirements.txt
scripts/: build_hotpot_mini.py  build_vectorstore.py
utils/: text_utils.py  trajectory_logger.py
(+38 files in other folders)
